--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sharedb-mongo",
-  "version": "1.0.0-beta.17",
+  "name": "@smithos/sharedb-mongo",
+  "version": "1.0.0-beta.1",
   "description": "MongoDB database adapter for ShareDB",
   "main": "index.js",
   "dependencies": {
